All the possible details to pass over from protocol builder.
